добавлен микросервис kafka и zookeeper, добавлена проверка на наличие токенов